--- a/apps/backend/project.json
+++ b/apps/backend/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "video-stream",
+  "name": "backend",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/video-stream/src",
+  "sourceRoot": "apps/backend/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -10,11 +10,11 @@
       "options": {
         "target": "node",
         "compiler": "tsc",
-        "outputPath": "dist/apps/video-stream",
-        "main": "apps/video-stream/src/main.ts",
-        "tsConfig": "apps/video-stream/tsconfig.app.json",
-        "assets": ["apps/video-stream/src/assets"],
-        "webpackConfig": "apps/video-stream/webpack.config.js"
+        "outputPath": "dist/apps/backend",
+        "main": "apps/backend/src/main.ts",
+        "tsConfig": "apps/backend/tsconfig.app.json",
+        "assets": ["apps/backend/src/assets"],
+        "webpackConfig": "apps/backend/webpack.config.js"
       },
       "configurations": {
         "production": {
@@ -27,11 +27,11 @@
     "serve": {
       "executor": "@nrwl/js:node",
       "options": {
-        "buildTarget": "video-stream:build"
+        "buildTarget": "backend:build"
       },
       "configurations": {
         "production": {
-          "buildTarget": "video-stream:build:production"
+          "buildTarget": "backend:build:production"
         }
       }
     },
@@ -39,14 +39,14 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/video-stream/**/*.ts"]
+        "lintFilePatterns": ["apps/backend/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/video-stream/jest.config.ts",
+        "jestConfig": "apps/backend/jest.config.ts",
         "passWithNoTests": true
       }
     }
