--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "setup": "npm ci && npm run sync",
+    "sync": "npx prisma generate && npx prisma db push && npm run seed",
+    "seed": "npx prisma db seed",
     "start": "npx nx run-many --target=serve"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +24,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -57,6 +64,7 @@
     "nx": "15.5.3",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "prisma": "^4.9.0",
     "tailwindcss": "^3.0.2",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
