--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.9.0",
+    "fluent-ffmpeg": "^2.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -45,6 +46,7 @@
     "@nrwl/node": "15.5.3",
     "@nrwl/webpack": "15.5.3",
     "@nrwl/workspace": "15.5.3",
+    "@types/fluent-ffmpeg": "^2.1.20",
     "@types/jest": "28.1.1",
     "@types/multer": "^1.4.7",
     "@types/node": "16.11.7",
